- Added classLoader example - Added Advanced Streams - Added Shallow and deep copy examples