@@ -14,7 +14,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>17</java.version>
+		<java.version>25</java.version>
 	</properties>
 
 	<dependencies>
@@ -36,8 +36,6 @@
 					<target>${java.version}</target>
 					<compilerArgs>
 						<arg>--enable-preview</arg>
-						<arg>--add-modules</arg>
-						<arg>jdk.incubator.foreign</arg>
 					</compilerArgs>
 				</configuration>
 			</plugin>
